<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Nombre -->
        <TextView
            android:id="@+id/textViewNombreTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/workoutText_nombre"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/separacion"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/textViewNombreTitulo"
            app:layout_constraintTop_toTopOf="@id/textViewNombreTitulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0" />

        <!-- Nivel -->
        <TextView
            android:id="@+id/textViewNivelTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workoutText_nivel"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/textViewNombreTitulo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textViewNivel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/separacion"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/textViewNivelTitulo"
            app:layout_constraintTop_toTopOf="@id/textViewNivelTitulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0" />

        <!-- Tiempo Total -->
        <TextView
            android:id="@+id/textViewTiempoTotalTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workoutText_tiempoTotal"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/textViewNivelTitulo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textViewTiempoTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/separacion"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/textViewTiempoTotalTitulo"
            app:layout_constraintTop_toTopOf="@id/textViewTiempoTotalTitulo"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Tiempo Previsto -->
        <TextView
            android:id="@+id/textViewTiempoPrevistoTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workoutText_tiempoPrevisto"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/textViewTiempoTotalTitulo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textViewTiempoPrevisto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/separacion"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/textViewTiempoPrevistoTitulo"
            app:layout_constraintTop_toTopOf="@id/textViewTiempoPrevistoTitulo"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Fecha -->
        <TextView
            android:id="@+id/textViewFechaTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workoutText_fecha"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/textViewTiempoPrevistoTitulo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textViewFecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/separacion"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/textViewFechaTitulo"
            app:layout_constraintTop_toTopOf="@id/textViewFechaTitulo"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Porcentaje -->
        <TextView
            android:id="@+id/textViewPorcentajeTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workoutText_completados"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/textViewFechaTitulo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textViewPorcentaje"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/separacion"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/textViewPorcentajeTitulo"
            app:layout_constraintTop_toTopOf="@id/textViewPorcentajeTitulo"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Video -->
        <TextView
            android:id="@+id/textViewVideoTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_url"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/textViewPorcentajeTitulo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textViewVideo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/separacion"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/textViewVideoTitulo"
            app:layout_constraintTop_toTopOf="@id/textViewVideoTitulo"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
